// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippets (default) > examples > 'GET /metadata (allow-multiple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetMetadataRequest{
		Shallow: acme.Bool(
			false,
		),
		Tag: []*string{
			acme.String(
				"development",
			),
			acme.String(
				"public",
			),
		},
		XAPIVersion: "0.0.1",
	}
	client.Service.GetMetadata(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > examples > 'GET /metadata (simple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetMetadataRequest{
		Shallow: acme.Bool(
			false,
		),
		Tag: []*string{
			acme.String(
				"development",
			),
		},
		XAPIVersion: "0.0.1",
	}
	client.Service.GetMetadata(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > examples > 'POST /big-entity (simple)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "entity"
    ],
    "message": "\\"entity\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "metadata"
    ],
    "message": "\\"metadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "commonMetadata"
    ],
    "message": "\\"commonMetadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "data"
    ],
    "message": "\\"data\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "exception"
    ],
    "message": "\\"exception\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "test"
    ],
    "message": "\\"test\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "node"
    ],
    "message": "\\"node\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "directory"
    ],
    "message": "\\"directory\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "moment"
    ],
    "message": "\\"moment\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "extendedMovie",
      "prequel"
    ],
    "message": "\\"prequel\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "extendedMovie",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (default) > examples > 'POST /movie (invalid request body)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "title"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (default) > examples > 'POST /movie (simple)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (default) > exhaustive > 'GET /object/get-and-return-with-optio…' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
	types "github.com/acme/acme-go/types"
	uuid "github.com/google/uuid"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &types.ObjectWithOptionalField{
		FieldString: acme.String(
			"string",
		),
		Integer: acme.Int(
			1,
		),
		Long: acme.Int64(
			1000000,
		),
		Double: acme.Float64(
			1.1,
		),
		Bool: acme.Bool(
			true,
		),
		Datetime: acme.Time(
			acme.MustParseDateTime(
				"2024-01-15T09:30:00Z",
			),
		),
		Date: acme.Time(
			acme.MustParseDate(
				"2023-01-15",
			),
		),
		UUID: acme.UUID(
			uuid.MustParse(
				"d5e9c84f-c2b2-4bf4-b4b0-7ffd7a9ffc32",
			),
		),
		Base64: []byte("SGVsbG8gd29ybGQh"),
		List: []string{
			"list",
			"list",
		},
		Set: []string{
			"set",
		},
		Map: map[int]string{
			1: "map",
		},
		Bigint: acme.String(
			"1000000",
		),
	}
	client.Endpoints.Object.GetAndReturnWithOptionalField(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-objects (inva…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[0]",
      "string"
    ],
    "message": "Expected string, got boolean"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[1]",
      "string"
    ],
    "message": "\\"string\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[2]",
      "string"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-objects (simp…' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
	types "github.com/acme/acme-go/types"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := []*types.ObjectWithRequiredField{
		&types.ObjectWithRequiredField{
			FieldString: "one",
		},
		&types.ObjectWithRequiredField{
			FieldString: "two",
		},
		&types.ObjectWithRequiredField{
			FieldString: "three",
		},
	}
	client.Endpoints.Container.GetAndReturnListOfObjects(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-primitives (s…' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := []string{
		"one",
		"two",
		"three",
	}
	client.Endpoints.Container.GetAndReturnListOfPrimitives(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > file-upload > 'POST /' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	io "io"
	strings "strings"
)

func do() {
	client := client.NewClient()
	request := &acme.MyRequest{
		File: strings.NewReader(
			"Hello, world!",
		),
		FileList: []io.Reader{
			strings.NewReader(
				"First",
			),
			strings.NewReader(
				"Second",
			),
		},
		MaybeFile: strings.NewReader(
			"",
		),
	}
	client.Service.Post(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > file-upload > 'POST /just-file' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewClient()
	request := &acme.JustFileRequest{
		File: strings.NewReader(
			"Hello, world!",
		),
	}
	client.Service.JustFile(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > file-upload > 'POST /just-file-with-query-params' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewClient()
	request := &acme.JustFileWithQueryParamsRequest{
		MaybeString: acme.String(
			"exists",
		),
		Integer: 42,
		File: strings.NewReader(
			"Hello, world!",
		),
	}
	client.Service.JustFileWithQueryParams(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Imdb.GetMovie(
		context.TODO(),
		"movie_xyz",
	)
}
"
`;

exports[`snippets (default) > imdb > 'POST /movies/create-movie (simple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.CreateMovieRequest{
		Title:  "The Matrix",
		Rating: 8.2,
	}
	client.Imdb.CreateMovie(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > multi-url-environment > 'Custom environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "The Go SDK doesn't support a multi-environment client option yet; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Invalid multi url environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "The Go SDK doesn't support a multi-environment client option yet; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Production environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Production,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetPresignedURLRequest{
		S3Key: "xyz",
	}
	client.S3.GetPresignedURL(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > multi-url-environment > 'Staging environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Staging,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetPresignedURLRequest{
		S3Key: "xyz",
	}
	client.S3.GetPresignedURL(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > multi-url-environment > 'Unrecognized environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets (default) > nullable > 'Body properties' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "activated"
    ],
    "message": "\\"activated\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "status"
    ],
    "message": "\\"status\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "values"
    ],
    "message": "\\"values\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (default) > nullable > 'Invalid null value' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "username"
    ],
    "message": "\\"username\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "tags"
    ],
    "message": "\\"tags\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "metadata"
    ],
    "message": "\\"metadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (default) > nullable > 'Query parameters' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			"https://api.example.com",
		),
	)
	request := &acme.GetUsersRequest{
		Usernames: []*string{
			acme.String(
				"john.doe",
			),
			acme.String(
				"jane.doe",
			),
		},
		Tags: []*string{},
	}
	client.Nullable.GetUsers(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (default) > read-write-only > 'Body properties' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "id"
    ],
    "message": "\\"id\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "email"
    ],
    "message": "\\"email\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "profile",
      "verification",
      "verified"
    ],
    "message": "\\"verified\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (default) > read-write-only > 'Readonly value in request' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "email"
    ],
    "message": "\\"email\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "profile",
      "verification",
      "verified"
    ],
    "message": "\\"verified\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (default) > single-url-environment-default > 'Production environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Production,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (default) > single-url-environment-default > 'Staging environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Staging,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (default) > single-url-environment-default > 'custom baseURL' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			"http://localhost:8080",
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (default) > single-url-environment-default > 'invalid baseURL and environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Cannot specify both baseUrl and environment options"
  }
]"
`;

exports[`snippets (default) > single-url-environment-default > 'invalid environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > examples > 'GET /metadata (allow-multiple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetMetadataRequest{
		Shallow: acme.Bool(
			false,
		),
		Tag: []*string{
			acme.String(
				"development",
			),
			acme.String(
				"public",
			),
		},
		XAPIVersion: "0.0.1",
	}
	client.Service.GetMetadata(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > examples > 'GET /metadata (simple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetMetadataRequest{
		Shallow: acme.Bool(
			false,
		),
		Tag: []*string{
			acme.String(
				"development",
			),
		},
		XAPIVersion: "0.0.1",
	}
	client.Service.GetMetadata(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > examples > 'POST /big-entity (simple)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "entity"
    ],
    "message": "\\"entity\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "metadata"
    ],
    "message": "\\"metadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "commonMetadata"
    ],
    "message": "\\"commonMetadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "data"
    ],
    "message": "\\"data\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "exception"
    ],
    "message": "\\"exception\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "test"
    ],
    "message": "\\"test\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "node"
    ],
    "message": "\\"node\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "directory"
    ],
    "message": "\\"directory\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "moment"
    ],
    "message": "\\"moment\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "extendedMovie",
      "prequel"
    ],
    "message": "\\"prequel\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "extendedMovie",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > examples > 'POST /movie (invalid request body)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "title"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > examples > 'POST /movie (simple)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > exhaustive > 'GET /object/get-and-return-with-optio…' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
	types "github.com/acme/acme-go/types"
	uuid "github.com/google/uuid"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &types.ObjectWithOptionalField{
		FieldString: acme.String(
			"string",
		),
		Integer: acme.Int(
			1,
		),
		Long: acme.Int64(
			1000000,
		),
		Double: acme.Float64(
			1.1,
		),
		Bool: acme.Bool(
			true,
		),
		Datetime: acme.Time(
			acme.MustParseDateTime(
				"2024-01-15T09:30:00Z",
			),
		),
		Date: acme.Time(
			acme.MustParseDate(
				"2023-01-15",
			),
		),
		UUID: acme.UUID(
			uuid.MustParse(
				"d5e9c84f-c2b2-4bf4-b4b0-7ffd7a9ffc32",
			),
		),
		Base64: []byte("SGVsbG8gd29ybGQh"),
		List: []string{
			"list",
			"list",
		},
		Set: []string{
			"set",
		},
		Map: map[int]string{
			1: "map",
		},
		Bigint: acme.String(
			"1000000",
		),
	}
	client.Endpoints.Object.GetAndReturnWithOptionalField(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > exhaustive > 'POST /container/list-of-objects (inva…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[0]",
      "string"
    ],
    "message": "Expected string, got boolean"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[1]",
      "string"
    ],
    "message": "\\"string\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[2]",
      "string"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > exhaustive > 'POST /container/list-of-objects (simp…' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
	types "github.com/acme/acme-go/types"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := []*types.ObjectWithRequiredField{
		&types.ObjectWithRequiredField{
			FieldString: "one",
		},
		&types.ObjectWithRequiredField{
			FieldString: "two",
		},
		&types.ObjectWithRequiredField{
			FieldString: "three",
		},
	}
	client.Endpoints.Container.GetAndReturnListOfObjects(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > exhaustive > 'POST /container/list-of-primitives (s…' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := []string{
		"one",
		"two",
		"three",
	}
	client.Endpoints.Container.GetAndReturnListOfPrimitives(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > file-upload > 'POST /' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	io "io"
	strings "strings"
)

func do() {
	client := client.NewClient()
	request := &acme.MyRequest{
		File: strings.NewReader(
			"Hello, world!",
		),
		FileList: []io.Reader{
			strings.NewReader(
				"First",
			),
			strings.NewReader(
				"Second",
			),
		},
		MaybeFile: strings.NewReader(
			"",
		),
	}
	client.Service.Post(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > file-upload > 'POST /just-file' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewClient()
	request := &acme.JustFileRequest{
		File: strings.NewReader(
			"Hello, world!",
		),
	}
	client.Service.JustFile(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > file-upload > 'POST /just-file-with-query-params' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewClient()
	request := &acme.JustFileWithQueryParamsRequest{
		MaybeString: acme.String(
			"exists",
		),
		Integer: 42,
		File: strings.NewReader(
			"Hello, world!",
		),
	}
	client.Service.JustFileWithQueryParams(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Imdb.GetMovie(
		context.TODO(),
		"movie_xyz",
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > imdb > 'POST /movies/create-movie (simple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.CreateMovieRequest{
		Title:  "The Matrix",
		Rating: 8.2,
	}
	client.Imdb.CreateMovie(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > multi-url-environment > 'Custom environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "The Go SDK doesn't support a multi-environment client option yet; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > multi-url-environment > 'Invalid multi url environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "The Go SDK doesn't support a multi-environment client option yet; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > multi-url-environment > 'Production environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Production,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetPresignedURLRequest{
		S3Key: "xyz",
	}
	client.S3.GetPresignedURL(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > multi-url-environment > 'Staging environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Staging,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetPresignedURLRequest{
		S3Key: "xyz",
	}
	client.S3.GetPresignedURL(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > multi-url-environment > 'Unrecognized environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > nullable > 'Body properties' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "activated"
    ],
    "message": "\\"activated\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "status"
    ],
    "message": "\\"status\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "values"
    ],
    "message": "\\"values\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > nullable > 'Invalid null value' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "username"
    ],
    "message": "\\"username\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "tags"
    ],
    "message": "\\"tags\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "metadata"
    ],
    "message": "\\"metadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > nullable > 'Query parameters' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			"https://api.example.com",
		),
	)
	request := &acme.GetUsersRequest{
		Usernames: []*string{
			acme.String(
				"john.doe",
			),
			acme.String(
				"jane.doe",
			),
		},
		Tags: []*string{},
	}
	client.Nullable.GetUsers(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > read-write-only > 'Body properties' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "id"
    ],
    "message": "\\"id\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "email"
    ],
    "message": "\\"email\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "profile",
      "verification",
      "verified"
    ],
    "message": "\\"verified\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > read-write-only > 'Readonly value in request' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "email"
    ],
    "message": "\\"email\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "profile",
      "verification",
      "verified"
    ],
    "message": "\\"verified\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > single-url-environment-default > 'Production environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Production,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > single-url-environment-default > 'Staging environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			acme.Environments.Staging,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > single-url-environment-default > 'custom baseURL' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithBaseURL(
			"http://localhost:8080",
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (exportAllRequestsAtRoot) > single-url-environment-default > 'invalid baseURL and environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Cannot specify both baseUrl and environment options"
  }
]"
`;

exports[`snippets (exportAllRequestsAtRoot) > single-url-environment-default > 'invalid environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets (exportedClientName) > examples > 'GET /metadata (allow-multiple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetMetadataRequest{
		Shallow: acme.Bool(
			false,
		),
		Tag: []*string{
			acme.String(
				"development",
			),
			acme.String(
				"public",
			),
		},
		XAPIVersion: "0.0.1",
	}
	client.Service.GetMetadata(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > examples > 'GET /metadata (simple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetMetadataRequest{
		Shallow: acme.Bool(
			false,
		),
		Tag: []*string{
			acme.String(
				"development",
			),
		},
		XAPIVersion: "0.0.1",
	}
	client.Service.GetMetadata(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > examples > 'POST /big-entity (simple)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "entity"
    ],
    "message": "\\"entity\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "metadata"
    ],
    "message": "\\"metadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "commonMetadata"
    ],
    "message": "\\"commonMetadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "data"
    ],
    "message": "\\"data\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "exception"
    ],
    "message": "\\"exception\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "test"
    ],
    "message": "\\"test\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "node"
    ],
    "message": "\\"node\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "directory"
    ],
    "message": "\\"directory\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "moment"
    ],
    "message": "\\"moment\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "extendedMovie",
      "prequel"
    ],
    "message": "\\"prequel\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "extendedMovie",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportedClientName) > examples > 'POST /movie (invalid request body)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "title"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (exportedClientName) > examples > 'POST /movie (simple)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "book"
    ],
    "message": "\\"book\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportedClientName) > exhaustive > 'GET /object/get-and-return-with-optio…' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
	types "github.com/acme/acme-go/types"
	uuid "github.com/google/uuid"
)

func do() {
	client := client.NewFernClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &types.ObjectWithOptionalField{
		FieldString: acme.String(
			"string",
		),
		Integer: acme.Int(
			1,
		),
		Long: acme.Int64(
			1000000,
		),
		Double: acme.Float64(
			1.1,
		),
		Bool: acme.Bool(
			true,
		),
		Datetime: acme.Time(
			acme.MustParseDateTime(
				"2024-01-15T09:30:00Z",
			),
		),
		Date: acme.Time(
			acme.MustParseDate(
				"2023-01-15",
			),
		),
		UUID: acme.UUID(
			uuid.MustParse(
				"d5e9c84f-c2b2-4bf4-b4b0-7ffd7a9ffc32",
			),
		),
		Base64: []byte("SGVsbG8gd29ybGQh"),
		List: []string{
			"list",
			"list",
		},
		Set: []string{
			"set",
		},
		Map: map[int]string{
			1: "map",
		},
		Bigint: acme.String(
			"1000000",
		),
	}
	client.Endpoints.Object.GetAndReturnWithOptionalField(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > exhaustive > 'POST /container/list-of-objects (inva…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[0]",
      "string"
    ],
    "message": "Expected string, got boolean"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[1]",
      "string"
    ],
    "message": "\\"string\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[2]",
      "string"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (exportedClientName) > exhaustive > 'POST /container/list-of-objects (simp…' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
	types "github.com/acme/acme-go/types"
)

func do() {
	client := client.NewFernClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := []*types.ObjectWithRequiredField{
		&types.ObjectWithRequiredField{
			FieldString: "one",
		},
		&types.ObjectWithRequiredField{
			FieldString: "two",
		},
		&types.ObjectWithRequiredField{
			FieldString: "three",
		},
	}
	client.Endpoints.Container.GetAndReturnListOfObjects(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > exhaustive > 'POST /container/list-of-primitives (s…' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := []string{
		"one",
		"two",
		"three",
	}
	client.Endpoints.Container.GetAndReturnListOfPrimitives(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > file-upload > 'POST /' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	io "io"
	strings "strings"
)

func do() {
	client := client.NewFernClient()
	request := &acme.MyRequest{
		File: strings.NewReader(
			"Hello, world!",
		),
		FileList: []io.Reader{
			strings.NewReader(
				"First",
			),
			strings.NewReader(
				"Second",
			),
		},
		MaybeFile: strings.NewReader(
			"",
		),
	}
	client.Service.Post(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > file-upload > 'POST /just-file' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewFernClient()
	request := &acme.JustFileRequest{
		File: strings.NewReader(
			"Hello, world!",
		),
	}
	client.Service.JustFile(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > file-upload > 'POST /just-file-with-query-params' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	strings "strings"
)

func do() {
	client := client.NewFernClient()
	request := &acme.JustFileWithQueryParamsRequest{
		MaybeString: acme.String(
			"exists",
		),
		Integer: 42,
		File: strings.NewReader(
			"Hello, world!",
		),
	}
	client.Service.JustFileWithQueryParams(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Imdb.GetMovie(
		context.TODO(),
		"movie_xyz",
	)
}
"
`;

exports[`snippets (exportedClientName) > imdb > 'POST /movies/create-movie (simple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.CreateMovieRequest{
		Title:  "The Matrix",
		Rating: 8.2,
	}
	client.Imdb.CreateMovie(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > multi-url-environment > 'Custom environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "The Go SDK doesn't support a multi-environment client option yet; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (exportedClientName) > multi-url-environment > 'Invalid multi url environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "The Go SDK doesn't support a multi-environment client option yet; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (exportedClientName) > multi-url-environment > 'Production environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithBaseURL(
			acme.Environments.Production,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetPresignedURLRequest{
		S3Key: "xyz",
	}
	client.S3.GetPresignedURL(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > multi-url-environment > 'Staging environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithBaseURL(
			acme.Environments.Staging,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	request := &acme.GetPresignedURLRequest{
		S3Key: "xyz",
	}
	client.S3.GetPresignedURL(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > multi-url-environment > 'Unrecognized environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets (exportedClientName) > nullable > 'Body properties' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "activated"
    ],
    "message": "\\"activated\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "status"
    ],
    "message": "\\"status\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "values"
    ],
    "message": "\\"values\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportedClientName) > nullable > 'Invalid null value' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "username"
    ],
    "message": "\\"username\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "tags"
    ],
    "message": "\\"tags\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "metadata"
    ],
    "message": "\\"metadata\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "avatar"
    ],
    "message": "\\"avatar\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportedClientName) > nullable > 'Query parameters' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithBaseURL(
			"https://api.example.com",
		),
	)
	request := &acme.GetUsersRequest{
		Usernames: []*string{
			acme.String(
				"john.doe",
			),
			acme.String(
				"jane.doe",
			),
		},
		Tags: []*string{},
	}
	client.Nullable.GetUsers(
		context.TODO(),
		request,
	)
}
"
`;

exports[`snippets (exportedClientName) > read-write-only > 'Body properties' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "id"
    ],
    "message": "\\"id\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "email"
    ],
    "message": "\\"email\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "profile",
      "verification",
      "verified"
    ],
    "message": "\\"verified\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportedClientName) > read-write-only > 'Readonly value in request' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "email"
    ],
    "message": "\\"email\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "profile",
      "verification",
      "verified"
    ],
    "message": "\\"verified\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets (exportedClientName) > single-url-environment-default > 'Production environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithBaseURL(
			acme.Environments.Production,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (exportedClientName) > single-url-environment-default > 'Staging environment' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithBaseURL(
			acme.Environments.Staging,
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (exportedClientName) > single-url-environment-default > 'custom baseURL' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewFernClient(
		option.WithBaseURL(
			"http://localhost:8080",
		),
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Dummy.GetDummy(
		context.TODO(),
	)
}
"
`;

exports[`snippets (exportedClientName) > single-url-environment-default > 'invalid baseURL and environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Cannot specify both baseUrl and environment options"
  }
]"
`;

exports[`snippets (exportedClientName) > single-url-environment-default > 'invalid environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;
